// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pgDehydrateEntity should return Array<DehydratedColumn> 1`] = `
[
  {
    "column": "id",
    "value": "abc",
  },
  {
    "column": "name",
    "value": "Alice",
  },
  {
    "column": "counter",
    "value": "42",
  },
]
`;

exports[`pgDehydrateEntity — CreateDate fields should include CreateDate fields in insert mode 1`] = `
[
  {
    "column": "id",
    "value": "abc",
  },
  {
    "column": "createdAt",
    "value": 2024-01-01T00:00:00.000Z,
  },
  {
    "column": "name",
    "value": "Alice",
  },
]
`;

exports[`pgDehydrateEntity — CreateDate fields should skip CreateDate fields in update mode 1`] = `
[
  {
    "column": "name",
    "value": "Alice",
  },
]
`;

exports[`pgDehydrateEntity — embedded fields should produce null for embedded fields when parent object is null 1`] = `
[
  {
    "column": "id",
    "value": "abc",
  },
  {
    "column": "street",
    "value": null,
  },
  {
    "column": "city",
    "value": null,
  },
]
`;

exports[`pgDehydrateEntity — embedded fields should produce null for embedded fields when parent object is undefined 1`] = `
[
  {
    "column": "id",
    "value": "abc",
  },
  {
    "column": "street",
    "value": null,
  },
  {
    "column": "city",
    "value": null,
  },
]
`;

exports[`pgDehydrateEntity — embedded fields should read embedded fields from nested object in insert mode 1`] = `
[
  {
    "column": "id",
    "value": "abc",
  },
  {
    "column": "street",
    "value": "123 Main St",
  },
  {
    "column": "city",
    "value": "Springfield",
  },
]
`;

exports[`pgDehydrateEntity — readonly fields should exclude readonly fields in update mode 1`] = `
[
  {
    "column": "name",
    "value": "Alice",
  },
]
`;

exports[`pgDehydrateEntity — readonly fields should include readonly fields in insert mode 1`] = `
[
  {
    "column": "id",
    "value": "abc",
  },
  {
    "column": "slug",
    "value": "alice-smith",
  },
  {
    "column": "name",
    "value": "Alice",
  },
]
`;

exports[`pgDehydrateEntity — transform functions should apply transform.to before writing the value 1`] = `
[
  {
    "column": "id",
    "value": "abc",
  },
  {
    "column": "code",
    "value": "HELLO-WORLD",
  },
  {
    "column": "payload",
    "value": "{"key":"value","count":3}",
  },
]
`;

exports[`pgDehydrateEntity — transform functions should apply transform.to in update mode as well 1`] = `
[
  {
    "column": "code",
    "value": "HELLO-WORLD",
  },
  {
    "column": "payload",
    "value": "{"key":"value","count":3}",
  },
]
`;

exports[`pgDehydrateEntity — transform functions should not apply transform when value is null 1`] = `
[
  {
    "column": "id",
    "value": "abc",
  },
  {
    "column": "code",
    "value": null,
  },
  {
    "column": "payload",
    "value": null,
  },
]
`;
